--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <nav class="topBar">
       <div class="wrap">
-        <h1><a href="#" class="logo">WOWOROOM</a></h1>
+        <h1><a href="manage.html" class="logo">WOWOROOM</a></h1>
         <span class="material-icons menuToggle"> menu </span>
         <ul class="topBar-menu">
           <li><a href="#bedAdvantage">床墊優勢</a></li>
